<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#E7E7E7"
    tools:context=".presentation.activity.AutoListActivity">

        <TextView
            android:id="@+id/auto_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_list_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:paddingVertical="8dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/auto_list_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_list_description"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_below="@id/auto_list_title"
            android:paddingBottom="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_items_auto_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_list_description"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_new_item_auto_list_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/auto_list_sum_textview"
        android:clickable="true"
        android:text="@string/add_new_item_auto_list_fab"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_input_add"
        android:focusable="true" />

        <TextView
            android:id="@+id/auto_list_sum_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/auto_list_sum_textview"
            android:textColor="@color/black"
            android:layout_toStartOf="@id/auto_list_remaining_sum_textview"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/auto_list_remaining_sum_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingHorizontal="8dp"
            android:text="@string/auto_list_remaining_sum_textview"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:textSize="18sp"/>
</RelativeLayout>
</layout>